--- a/styleresponsive.css
+++ b/styleresponsive.css
@@ -6,13 +6,18 @@ body {
 }
 /* header start */
 header {
-	margin: 1.875rem 1.25rem;
+	margin: 1.875rem 5.333%;
 }
 nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
+}
+.logo {
+	height: 1.878rem;
+	width: 5.938rem;
+	object-fit: cover;
 }
 .anchor-box {
 	width: 100%;
@@ -32,7 +37,7 @@ nav {
 .anchor {
 	text-decoration: none;
 	flex: 1;
-	color: black;
+	color: #000000;
 	text-align: center;
 	border-bottom: 0.3rem solid #f2f2f2;
 	padding-bottom: 1rem;
@@ -72,7 +77,7 @@ h2 {
 /* breakpoint desktop */
 @media screen and (min-width: 900px) {
 	header {
-		margin: 3.125rem 3.125rem 0 3.125rem;
+		margin: 3.125rem 3.472% 0 3.472%;
 		font-size: 1rem;
 	}
 	nav {
@@ -82,7 +87,7 @@ h2 {
 	}
 	nav img {
 		position: absolute;
-		left: 3.125rem;
+		left: 3.472%;
 		top: 3.125rem;
 	}
 	.anchor-box {
@@ -106,7 +111,7 @@ h2 {
 	.sign-in:hover {
 		transition: all 0.2s;
 		transform: scale(1.2);
-		text-shadow: 1px 1px 1px white, 2px 2px 1px #919191, 3px 3px 1px #919191;
+		text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #919191, 3px 3px 1px #919191;
 	}
 	h1 {
 		margin-top: 3.125rem;
@@ -142,11 +147,11 @@ h2 {
 	height: 3.125rem;
 	padding-left: 10px;
 	font-weight: bold;
-	color: black;
+	color: #000000;
 	border: none;
 }
 .search-bar input::placeholder {
-	color: black;
+	color: #000000;
 	font-size: 1rem;
 	padding-left: 10px;
 }
@@ -159,7 +164,7 @@ h2 {
 	border: none;
 	background-color: #0065fc;
 	border-radius: 15px 15px 15px 15px;
-	color: white;
+	color: #ffffff;
 	background-color: #0065fc;
 	font-size: 1.2rem;
 }
@@ -176,7 +181,7 @@ h2 {
 /* breakpoint desktop */
 @media screen and (min-width: 900px) {
 	.search-bar {
-		margin: 2rem 0 0 3.125rem;
+		margin: 2rem 0 0 3.472%;
 		width: 26.375rem;
 		transition: all 0.2s;
 	}
@@ -195,7 +200,7 @@ h2 {
 		max-height: 3.125rem;
 		border: none;
 		background-color: #0065fc;
-		color: white;
+		color: #ffffff;
 		background-color: #0065fc;
 		font-size: 1rem;
 		border-radius: 0;
@@ -219,8 +224,8 @@ h2 {
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
 	margin-top: 1rem;
 }
 .line-tittle {
@@ -265,10 +270,10 @@ h2 {
 }
 .filters-bar:link {
 	text-decoration: none;
-	color: black;
+	color: #000000;
 }
 .filters-bar:visited {
-	color: black;
+	color: #000000;
 }
 
 .filters-icon {
@@ -303,8 +308,8 @@ h2 {
 	is deformed in small resolution */
 	min-width: 1.25rem;
 	min-height: 1.25rem;
-	margin-right: 10px;
-	font-size: small;
+	margin-right: 0.625rem;
+	font-size: 1rem;
 	color: #0065fc;
 	border: 2px solid #f2f2f2;
 	border-radius: 50%;
@@ -323,7 +328,7 @@ h2 {
 @media screen and (min-width: 1000px) {
 	.filters-box {
 		justify-content: flex-start;
-		margin-left: 3.125rem;
+		margin-left: 3.472%;
 		margin-top: 1.875rem;
 	}
 	.line-tittle {
@@ -360,8 +365,8 @@ h2 {
 	justify-content: space-between;
 	font-size: 1.5rem;
 	font-weight: bold;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
 	margin-top: 2.5rem;
 	margin-bottom: 1.563rem;
 }
@@ -371,9 +376,9 @@ h2 {
 	justify-content: left;
 	overflow: hidden;
 	height: 8.375rem;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
-	border: 4px solid white;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
+	border: 4px solid #ffffff;
 	border-radius: 15px;
 	transition: all 0.3s;
 	box-shadow: 1px 1px 8px #f2f2f2;
@@ -390,7 +395,7 @@ h2 {
 	justify-content: space-around;
 	height: 100%;
 	width: 66%;
-	background-color: white;
+	background-color: #ffffff;
 }
 .location {
 	margin-top: 0;
@@ -404,11 +409,11 @@ h2 {
 	margin-left: 1.25rem;
 }
 .popular-thumbnail-link:link {
-	color: black;
+	color: #000000;
 	text-decoration: none;
 }
 .popular-thumbnail-link:visited {
-	color: black;
+	color: #000000;
 }
 .bluestar {
 	color: #0065fc;
@@ -424,8 +429,8 @@ h2 {
 }
 .rental-head {
 	margin-top: 2.5rem;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
 	font-size: 1.5rem;
 }
 .rental-thumbnail-link {
@@ -433,9 +438,9 @@ h2 {
 	flex-direction: column;
 	overflow: hidden;
 	height: 11.875rem;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
-	border: 4px solid white;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
+	border: 4px solid #ffffff;
 	border-radius: 15px;
 	transition: all 0.3s;
 	box-shadow: 1px 1px 8px #f2f2f2;
@@ -452,24 +457,24 @@ h2 {
 	justify-content: space-around;
 	height: 40%;
 	width: 100%;
-	background-color: white;
+	background-color: #ffffff;
 }
 
 .rental-thumbnail-link:link {
-	color: black;
+	color: #000000;
 	text-decoration: none;
 }
 .rental-thumbnail-link:visited {
-	color: black;
+	color: #000000;
 }
 .search-more-link {
 	margin-top: 2rem;
-	margin-left: 1.25rem;
+	margin-left: 5.333%;
 	text-decoration: none;
 	font-weight: bold;
 }
 .search-more-link:visited {
-	color: black;
+	color: #000000;
 }
 /* breakpoint pad */
 @media screen and (min-width: 594px) {
@@ -492,21 +497,13 @@ h2 {
 }
 /* breakpoint pad/desktop */
 @media screen and (min-width: 800px) {
-	.popular-thumbnail-link {
-		margin-right: 15%;
-		margin-left: 15%;
-	}
 	.filters-box {
 		justify-content: left;
-		margin-left: 3.125rem;
+		margin-left: 3.472%;
 	}
 	.popular-box {
 		flex-direction: row;
 		flex-wrap: wrap;
-	}
-	.popular-thumbnail-link {
-		margin-left: 20%;
-		margin-right: 20%;
 	}
 	.popular-head {
 		width: 90%;
@@ -560,7 +557,7 @@ h2 {
 	}
 	.search-more-link:hover {
 		transform: scale(1.1);
-		text-shadow: 1px 1px 1px white, 2px 2px 1px #0065fc, 3px 3px 1px #0065fc;
+		text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #0065fc, 3px 3px 1px #0065fc;
 	}
 	.popular-box {
 		flex-direction: column;
@@ -595,10 +592,11 @@ h2 {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+	transition: all 0.3s;
 	height: 11.875rem;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
-	border-radius: 15px;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
+	border-radius: 1rem;
 	box-shadow: 1px 1px 8px #f2f2f2;
 	margin-bottom: 0.625rem;
 }
@@ -613,34 +611,34 @@ h2 {
 	justify-content: left;
 	height: 28%;
 	width: 100%;
-	background-color: white;
+	background-color: #ffffff;
 }
 .activities-thumbnail-phone:link {
-	color: black;
+	color: #000000;
 	text-decoration: none;
 }
 .activities-thumbnail-phone:visited {
-	color: black;
+	color: #000000;
 }
 .activities-location {
 	margin: auto auto auto 1.25rem;
 }
 .activities-head {
 	margin-top: 2.5rem;
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
+	margin-left: 5.333%;
+	margin-right: 5.333%;
 	font-size: 1.5rem;
 }
 /*breakpoint pad*/
 @media screen and (min-width: 594px) {
 	.activities-thumbnail-phone {
-		margin-left: 10%;
-		margin-right: 10%;
-	}
-	.activities-head {
 		width: 80%;
 		margin-left: auto;
 		margin-right: auto;
+	}
+	.activities-head {
+		width: 80%;
+		margin-left: 5.333%;
 	}
 }
 /*breakpoint pad/desktop*/
@@ -686,8 +684,39 @@ h2 {
 		margin-left: 3.472%;
 		margin-right: 3.472%;
 	}
+	.activities-head {
+		margin-left: 3.472%;
+	}
+	.activities-image-size-1 {
+		height: 24.375rem;
+	}
+	.activities-text-size-1 {
+		height: 3.438rem;
+	}
+	.activities-image-size-2 {
+		height: 11.437rem;
+	}
+	.activities-text-size-2 {
+		height: 3.438rem;
+	}
+	.activities-image-size-3 {
+		height: 6.875rem;
+	}
+	.activities-text-size-3 {
+		height: 3.438rem;
+	}
+	.activities-image-size-4 {
+		height: 8.437rem;
+	}
+	.activities-text-size-4 {
+		height: 3.438rem;
+	}
 	.activities-thumbnail-phone {
 		margin: 0;
+	}
+	.activities-thumbnail-phone:hover {
+		transform: scale(1.1);
+		box-shadow: 3px 3px 5px #0065fc;
 	}
 	.activities-thumbnail-link-1 {
 		height: 27.813rem;
@@ -740,8 +769,8 @@ footer {
 footer aside {
 	display: flex;
 	flex-direction: column;
-	padding-right: 1.25rem;
-	padding-left: 1.25rem;
+	padding-right: 5.333%;
+	padding-left: 5.333%;
 }
 footer p {
 	font-weight: bold;
@@ -756,6 +785,10 @@ footer a {
 footer a:visited {
 	color: #000000;
 }
+footer a:hover {
+	transform: scale(1.1);
+	text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #0065fc, 3px 3px 1px #0065fc;
+}
 @media screen and (min-width: 594px) {
 	footer {
 		flex-direction: row;
@@ -765,7 +798,7 @@ footer a:visited {
 	footer {
 		justify-content: space-between;
 		padding-right: 25.694%;
-		padding-left: 3.125rem;
+		padding-left: 3.472%;
 	}
 	footer aside {
 		padding-left: 0;
@@ -785,5 +818,15 @@ footer a:visited {
 @media screen and (min-width: 1700px) {
 	html {
 		font-size: 22px;
+	}
+}
+@media screen and (min-width: 1800px) {
+	html {
+		font-size: 23px;
+	}
+}
+@media screen and (min-width: 1900px) {
+	html {
+		font-size: 24px;
 	}
 }
