--- a/styleresponsive.css
+++ b/styleresponsive.css
@@ -109,9 +109,9 @@ h2 {
 		border-bottom: none;
 	}
 	.sign-in:hover {
-		transition: all 0.2s;
-		transform: scale(1.2);
-		text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #919191, 3px 3px 1px #919191;
+		transition: all 0.3s;
+		transform: scale(1.1);
+		text-shadow: 3px 3px 3px#837e7e;
 	}
 	h1 {
 		margin-top: 3.125rem;
@@ -557,7 +557,8 @@ h2 {
 	}
 	.search-more-link:hover {
 		transform: scale(1.1);
-		text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #0065fc, 3px 3px 1px #0065fc;
+		color: #0065fc;
+		text-shadow: 3px 3px 3px#837e7e;
 	}
 	.popular-box {
 		flex-direction: column;
@@ -786,8 +787,9 @@ footer a:visited {
 	color: #000000;
 }
 footer a:hover {
-	transform: scale(1.1);
-	text-shadow: 1px 1px 1px #ffffff, 2px 2px 1px #0065fc, 3px 3px 1px #0065fc;
+	font-weight: bold;
+	color: #0065fc;
+	text-shadow: 3px 3px 3px#837e7e;
 }
 @media screen and (min-width: 594px) {
 	footer {
