--- a/styleresponsive.css
+++ b/styleresponsive.css
@@ -3,6 +3,7 @@ body {
 	font-family: "Raleway", Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	margin: auto;
+	background-color: #ffffff;
 }
 /* header start */
 header {
@@ -39,7 +40,7 @@ nav {
 	flex: 1;
 	color: #000000;
 	text-align: center;
-	border-bottom: 0.3rem solid #f2f2f2;
+	border-bottom: 0.2rem solid #f2f2f2;
 	padding-bottom: 1rem;
 }
 .anchor:focus {
@@ -77,12 +78,13 @@ h2 {
 /* breakpoint desktop */
 @media screen and (min-width: 900px) {
 	header {
-		margin: 3.125rem 3.472% 0 3.472%;
+		margin: 2.5rem 3.472% 0 3.472%;
 		font-size: 1rem;
 	}
 	nav {
 		justify-content: flex-end;
-		margin-top: 3.125rem;
+
+		margin-top: 2.5rem;
 		height: 3.2rem;
 	}
 	nav img {
@@ -91,14 +93,15 @@ h2 {
 		top: 3.125rem;
 	}
 	.anchor-box {
-		width: auto;
+		width: 17rem;
+		margin-right: 0.5rem;
 	}
 	.anchor {
 		display: flex;
 		border-bottom: none;
+		justify-content: center;
 		align-items: center;
 		padding-top: 0;
-		margin-right: 3.75rem;
 		height: 3rem;
 	}
 	.anchor:hover {
@@ -231,6 +234,7 @@ h2 {
 .line-tittle {
 	display: flex;
 	width: 100%;
+	font-size: 1rem;
 }
 .filters-bar1 {
 	width: 11.875rem;
@@ -292,6 +296,7 @@ h2 {
 	display: flex;
 	justify-content: center;
 	font-weight: bold;
+	font-size: 1rem;
 }
 .info-line {
 	display: flex;
@@ -341,11 +346,14 @@ h2 {
 		margin-right: 1.5rem;
 		margin-left: 0;
 	}
-	.filters-icon:hover {
+	.filters-hover:hover .filters-name {
+		color: #0065fc;
+	}
+	.filters-hover:hover .filters-icon {
 		color: #deebff;
 		transform: rotateZ(360deg);
 		background-color: #0065fc;
-		transition: all 0.5s;
+		transition: all 0.3s;
 	}
 	.info-line {
 		margin-top: 1.875rem;
@@ -381,7 +389,7 @@ h2 {
 	border: 4px solid #ffffff;
 	border-radius: 15px;
 	transition: all 0.3s;
-	box-shadow: 1px 1px 8px #f2f2f2;
+	box-shadow: 1px 1px 5px #a3a1a1;
 	margin-bottom: 0.625rem;
 }
 .popular-image-size {
@@ -443,7 +451,7 @@ h2 {
 	border: 4px solid #ffffff;
 	border-radius: 15px;
 	transition: all 0.3s;
-	box-shadow: 1px 1px 8px #f2f2f2;
+	box-shadow: 1px 1px 5px #a3a1a1;
 	margin-bottom: 0.625rem;
 }
 .rental-image-size {
@@ -548,7 +556,7 @@ h2 {
 	}
 	.rental-thumbnail-link:hover {
 		transform: scale(1.1);
-		box-shadow: 3px 3px 5px #0065fc;
+		box-shadow: 3px 3px 5px #a3a1a1;
 	}
 	.search-more-link {
 		width: auto;
@@ -581,7 +589,7 @@ h2 {
 	}
 	.popular-thumbnail-link:hover {
 		transform: scale(1.1);
-		box-shadow: 3px 3px 5px #0065fc;
+		box-shadow: 3px 3px 5px #a3a1a1;
 	}
 	.popular-head {
 		width: auto;
@@ -601,7 +609,7 @@ h2 {
 	margin-left: 5.333%;
 	margin-right: 5.333%;
 	border-radius: 1rem;
-	box-shadow: 1px 1px 8px #f2f2f2;
+	box-shadow: 1px 1px 5px #a3a1a1;
 	margin-bottom: 0.625rem;
 }
 .activities-image-size {
@@ -720,7 +728,7 @@ h2 {
 	}
 	.activities-thumbnail-phone:hover {
 		transform: scale(1.1);
-		box-shadow: 3px 3px 5px #0065fc;
+		box-shadow: 3px 3px 5px #a3a1a1;
 	}
 	.activities-thumbnail-link-1 {
 		height: 27.813rem;
@@ -802,36 +810,37 @@ footer a:hover {
 @media screen and (min-width: 900px) {
 	footer {
 		justify-content: space-between;
-		padding-right: 25.694%;
+		padding-right: 6.694%;
 		padding-left: 3.472%;
 	}
 	footer aside {
 		padding-left: 0;
 		padding-right: 0;
+		width: 30%;
 	}
 }
 @media screen and (min-width: 1500px) {
 	html {
-		font-size: 18px;
+		font-size: 17px;
 	}
 }
 @media screen and (min-width: 1600px) {
 	html {
-		font-size: 20px;
+		font-size: 18px;
 	}
 }
 @media screen and (min-width: 1700px) {
 	html {
-		font-size: 22px;
+		font-size: 19px;
 	}
 }
 @media screen and (min-width: 1800px) {
 	html {
-		font-size: 23px;
+		font-size: 20px;
 	}
 }
 @media screen and (min-width: 1900px) {
 	html {
-		font-size: 24px;
+		font-size: 21px;
 	}
 }
